--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.5",
     "infinite-react-carousel": "^1.2.11",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
